feat: half-fixed the method descriptor